src/styles/sections/tariff.css
.main__how-to-get-tariff-title--visually-hidden {
    display: none;
}

.main__step-title--visually-hidden {
    display: none;
}

.main__how-to-get-tariff-slogan {
    font-family: "Tele2 DisplaySerif Regular";
    font-size: 40px;
    font-weight: 700;
    line-height: 52px;
    margin-bottom: 64px;
    grid-column: 1/2;
}

.first {
    width: 432px;
}

.second {
    width: 492px;
}

.third {
    width: 387px;
}

.main__how-to-get-tariff-slogan--benefit {
    color: var(--blue-color);
}

.main__step-title {
    color: var(--blue-color);
    font-size: 40px;
    font-weight: 700;
    line-height: 52px;
    font-family: "Tele2 DisplaySerif Regular";
}

.main__how-to-get-tariff-personal-data {
    grid-column: 1/2;
}

.main__how-to-get-tariff-list-steps {
    grid-row-start: 1;
    grid-row-end: 3;
    grid-column: 2/2;
    display: flex;
    align-items: start;
    justify-content: start;
}

.main__how-to-get-tariff-processing-personal-data {
    display: flex;
    flex-direction: column;
    gap: 29px;
}

.main__processing-personal-data-input-tel {
    display: flex;
    flex-direction: column-reverse;
}

.main__how-to-get-tariff {
    display: grid;
    grid-template-columns: 348px 598px;
    column-gap: 130px;
}

.main__step-eclipse {
    width: 80px;
    height: 80px;
    border-radius: var(--border-radius-eclipse);
    background: none;
    border: 2px solid var(--line-color);
    display: flex;
    justify-content: center;
    align-items: center;
    color: var(--blue-color);
    font-size: 35px;
    font-weight: 700;
    line-height: 52px;
    font-family: "Tele2 DisplaySerif Regular";
}

.main__how-to-get-tariff-list {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 23px;
    justify-content: start;
    flex-wrap: wrap;
}

.main__item-step {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: start;
    gap: 24px;
    width: 100%;
}

.main__step-description {
    font-size: var(--info-text-size);
    line-height: 30px;
    font-weight: 400;
    font-family: "Tele2 TextSans Regular";
}

.main__processing-personal-data-tel-label {
    font-size: 13px;
    color: var(--data-color);
    font-weight: 400;
    line-height: 18px;
    font-family: "Tele2 TextSans Regular";
}

.main__processing-personal-data-input-tel {
    background: none;
    border: none;
    border-bottom: 1px solid var(--line-color);
    font-size: 16px;
    font-family: "Tele2 TextSans Regular";
    color: var(--white-color);
}

.main__processing-personal-data-input-tel:focus {
    outline: none;
}

.main__processing-personal-data-agreement {
    display: flex;
    align-items: start;
    gap: 8px;
}

.main__processing-personal-data-agree {
    appearance: none;
    margin: 0;
    width: 24px;
    height: 24px;
    border: 2px solid white;
    cursor: pointer;
}

.main__processing-personal-data-agree:checked {
    background-image: url('/tele2_landing/images/checked.svg');
    background-repeat: no-repeat;
    background-position: center;
    color: black;
}

.main__processing-personal-data-agree-label {
    font-size: 16px;
    font-weight: 400;
    line-height: 22px;
    font-family: "Tele2 TextSans Regular";
    width: 316px;
}

.main__processing-personal-data-submit {
    width: 218px;
    height: 48px;
    border-radius: var(--border-radius-button);
    border: none;
    font-family: "Tele2 TextSans Regular";
    font-weight: 700;
    font-size: 16px;
    line-height: 22px;
    cursor: pointer;
    margin-top: 8px;
}

.main__how-to-get-tariff-info-message {
    display: flex;
    justify-content: start;
    align-items: center;
    background-color: var(--info-message-color);
    height: 48px;
    gap: 12px;
    padding-left: 12px;
    border-radius: 8px;
    margin-top: 48px;
}

.info-messagage__text-mesage {
    font-family: "Tele2 TextSans Regular";
    font-size: 14px;
    font-weight: 400;
    line-height: 19px;
}

.main__processing-personal-data-input-tel-block {
    width: 100%;
    display: flex;
    flex-direction: column-reverse;
}

.main__processing-personal-data-input-tel {
    width: 100%;
}

@media screen and (max-width: 1178px) {
    .main__how-to-get-tariff {
        column-gap: 30px;
    }
}

@media screen and (max-width: 1024px) {
    .main__how-to-get-tariff {
        display: flex;
        flex-direction: column;
        gap: 40px;
    }

    .main__step-eclipse {
        width: 56px;
        height: 56px;
        font-size: 24px;
    }

    .main__how-to-get-tariff-slogan {
        order: 0;
        margin: 0;
    }

    .main__how-to-get-tariff-personal-data {
        order: 2;
    }

    .main__how-to-get-tariff-list-steps {
        order: 1;
    }
}

@media screen and (max-width: 576px) {
    .main__how-to-get-tariff {
        display: flex;
        flex-direction: column;
        gap: 40px;
        padding: 0px 16px 0px 16px;
    }

    .main__item-step {
        flex-direction: column;
        align-items: start;
        gap: 16px;
    }

    .main__how-to-get-tariff-list {
        gap: 16px;
    }

    .main__how-to-get-tariff-slogan {
        font-size: 24px;
        order: 0;
        margin: 0;
        line-height: 33px;
    }

    .main__step-eclipse {
        width: 56px;
        height: 56px;
        font-size: 24px;
    }

    .main__how-to-get-tariff-personal-data {
        order: 2;
    }

    .main__how-to-get-tariff-list-steps {
        order: 1;
    }

    .main__processing-personal-data-submit {
        justify-self: center;
    }

    .main__submit-form {
        width: 100%;
        display: flex;
        justify-content: center;
    }

    .first {
        width: 288px;
    }

    .second {
        width: 272px;
    }

    .third {
        width: 288px;
    }

    .main__processing-personal-data-agree-label {
        width: 256px;
    }
}

